--- a/001-060.html
+++ b/001-060.html
@@ -11,23 +11,26 @@
 </head>
 <body>
   <div class="main">
-    <!-- Sidebar -->
     <div class="sidebar">
-      <div class="nav">
-        <div class="nav-option"><i class="fa-solid fa-house"></i><a href="index.html">Home</a></div>
-        <div class="nav-option"><i class="fa-solid fa-circle-info"></i><a href="#">Acerca de</a></div>
-      </div>
-       <div class="library">
+            <div class="nav">
+                <div class="nav-option">
+                    <i class="fa-solid fa-house"></i><a href="index.html">Home</a>
+                </div>
+                <div class="nav-option">
+                    <i class="fa-solid fa-circle-info"></i><a href="#">Acerca de</a>
+                </div>
+            </div>
+            <div class="library">
                 <br>
                 <div class="options">
                     <div class="lib-option nav-option">
-                        <a href="static/introduccion.html">Información General</a>
+                        <a href="static/introduccion.html">Informacion General</a>
                     </div>
                     <div class="icons">
-                        <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="001-060.html"><i class="fa-solid fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <button class="menu-toggle">☰ Información General</button>
+                <button class="menu-toggle">☰ Informacion General</button>
                 <div class="lib-menu">
                     <div class="lib-box">
                         <div class="box">
@@ -47,7 +50,7 @@
                         </div>
                         <div class="box">
                             <h3>PRESENTACIÓN</h3>
-                            <p>La Iglesia Nacional Presbiteriana de México, como parte...</p>
+                            <p>La Iglesia Nacional Presbiteriana de México, como...</p>
                             <button class="badge" onclick="location.href='static/presentacion.html'">Contenido</button>
                         </div>
                         <div class="box">
@@ -68,9 +71,8 @@
                     </div>
                 </div>
             </div>
-    </div>
-
-    <!-- Main Content -->
+        </div>
+  <!-- Main Content -->
     <div class="main-content">
       <div class="sticky-nav">
         <div class="nav-icons">
@@ -111,5 +113,8 @@
       })
       .catch(err => console.error('Error cargando himnos:', err));
   </script>
+  <script src="./components/script.js"></script>
+    <script src="./components/menu-togle.js"></script>
+    <script src="ssearch.js"></script>
 </body>
 </html>
