--- a/app/himno.html
+++ b/app/himno.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" />
   <link rel="icon" href="../images/libro.png" />
   <title>Himnario Presbiteriano</title>
-  <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="../estilos.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet" />
 </head>
 <body>
