--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
         </div>
         <div class="main-content">
             <div class="sticky-nav"></div>
-            <div class="">
-                <h3>Buscar página</h3>
-                <br>
-                <input type="text" id="searchInput" placeholder="Escribe el número o título" class="input-busqueda" oninput="mostrarSugerencias()">
-                <div id="sugerencias" class="suggestions-box"></div>
+
+            <!-- Buscador -->
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Buscar himno por título..." />
+                <button id="searchBtn"><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
+
             <h2>Himnario Presbiteriano Solo a Dios se la Gloria</h2>
-            <div class="cards-container">
+            <div class="cards-container" id="resultsContainer">
                 <div class="card">
                     <a href="001-060.html"><img src="images/carpeta-abierta.png" class="card-img"></a>
                     <p class="card-title">001 - 060</p>
@@ -141,14 +142,53 @@
     </div>
     <script src="./components/script.js"></script>
     <script src="./components/menu-togle.js"></script>
-    <script src="./search.js"></script>
     <script>
+        let himnosData = {};
+
         fetch('./app/letra.json')
             .then(response => response.json())
-            .then(himnos => {
-                console.log("Himnos cargados", himnos);
-                // Aquí puedes manipular los datos como antes con PHP
+            .then(data => {
+                himnosData = data;
             });
+
+        document.getElementById('searchBtn').addEventListener('click', searchHimnos);
+        document.getElementById('searchInput').addEventListener('keyup', (e) => {
+            if (e.key === 'Enter') searchHimnos();
+        });
+
+        function searchHimnos() {
+    const query = document.getElementById('searchInput').value.toLowerCase();
+    const resultsContainer = document.getElementById('resultsContainer');
+    resultsContainer.innerHTML = '';
+
+    if (!query) {
+        resultsContainer.innerHTML = '<p>Ingresa un número o parte del título para buscar.</p>';
+        return;
+    }
+
+    let found = false;
+    for (let key in himnosData) {
+        const numero = key.toString();
+        const titulo = himnosData[key].titulo.toLowerCase();
+
+        // Buscar por número exacto o coincidencia parcial en el título
+        if (numero === query || titulo.includes(query)) {
+            found = true;
+            const div = document.createElement('div');
+            div.classList.add('card');
+            div.innerHTML = `
+                <p class="card-title">${numero} - ${himnosData[key].titulo}</p>
+                <p class="card-info">${himnosData[key].letra.substring(0, 100)}...</p>
+            `;
+            resultsContainer.appendChild(div);
+        }
+    }
+
+    if (!found) {
+        resultsContainer.innerHTML = '<p>No se encontró ningún himno con ese número o título.</p>';
+    }
+}
+        
     </script>
 </body>
 </html>
