--- a/001-060.html
+++ b/001-060.html
@@ -115,6 +115,6 @@
   </script>
   <script src="./components/script.js"></script>
     <script src="./components/menu-togle.js"></script>
-    <script src="ssearch.js"></script>
+    <script src="search.js"></script>
 </body>
 </html>
