--- a/static/reseña.html
+++ b/static/reseña.html
@@ -6,31 +6,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="../images/libro.png">
     <title>Himnario Presbiteriano</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-    <style>
-        h1, h2 {
-            text-align: center;
-            color: white;
-        }
-        h3 {
-            color: white;
-        }
-        section {
-            margin-bottom: 40px;
-        }
-        ul {
-            margin-top: 10px;
-            margin-bottom: 20px;
-        }
-        footer {
-            margin-top: 60px;
-            text-align: center;
-            font-weight: bold;
-        }
-    </style>
 </head>
 <body>
     <div class="main">
