Correccion de himnos

--- a/401-500.html
+++ b/401-500.html
@@ -76,12 +76,12 @@
     <div class="main-content">
       <div class="sticky-nav">
         <div class="nav-icons">
-          <a href="index.html"><img src="images/backward_icon.png" class="hide" alt="Back" /></a>
-          <a href="61-110.html"><img src="images/forward_icon.png" class="hide" alt="Forward" /></a>
+          <a href="301-400.html"><img src="images/backward_icon.png" class="hide" alt="Back" /></a>
+          <a href="501-600.html"><img src="images/forward_icon.png" class="hide" alt="Forward" /></a>
         </div>
       </div>
 
-      <h2 style="text-align:center; margin:1rem;">Himnos 001 - 060</h2>
+      <h2 style="text-align:center; margin:1rem;">Himnos 401 - 500</h2>
       <div class="playlist" id="playlist-container">
         <!-- Cards generadas por JS -->
       </div>
