--- a/701-706.html
+++ b/701-706.html
@@ -76,12 +76,11 @@
     <div class="main-content">
       <div class="sticky-nav">
         <div class="nav-icons">
-          <a href="index.html"><img src="images/backward_icon.png" class="hide" alt="Back" /></a>
-          <a href="61-110.html"><img src="images/forward_icon.png" class="hide" alt="Forward" /></a>
+          <a href="601-700.html"><img src="images/backward_icon.png" class="hide" alt="Back" /></a>
         </div>
       </div>
 
-      <h2 style="text-align:center; margin:1rem;">Himnos 001 - 060</h2>
+      <h2 style="text-align:center; margin:1rem;">Himnos 701 - 706</h2>
       <div class="playlist" id="playlist-container">
         <!-- Cards generadas por JS -->
       </div>
