--- a/public/Sociedad_Fem.html
+++ b/public/Sociedad_Fem.html
@@ -2,36 +2,20 @@
 <div class="cards-container" id="cards-container"></div>
 
 <script>
-    // Función para generar las tarjetas
-    function generarCards(titulos) {
+    // Función para generar la tarjeta del himno 707 (Sociedad Femenil)
+    function generarCards() {
         const container = document.getElementById('cards-container');
-        container.innerHTML = ""; // Limpiar contenido previo
-
-        for (let i = 1; i <= 60; i++) {
-            const num = String(i).padStart(3, '0'); // Formato 001, 002...
-            const titulo = titulos[i - 1] || "Sin título";
-
-            const card = document.createElement('div');
-            card.classList.add('card');
-
-            card.innerHTML = `
-                <a href="app/himno.html?ver=${i}">
-                    <img src="images/portada.jpg" class="card-img" alt="Himno ${num}">
+        container.innerHTML = `
+            <div class="card">
+                <a href="app/Sociedad_Fem/Sociedad_001.html">
+                    <img src="images/portada.jpg" class="card-img" alt="Himno 707">
                 </a>
-                <p class="card-title">${num}</p>
-                <p class="card-info">${titulo}</p>
-            `;
-
-            container.appendChild(card);
-        }
+                <p class="card-title">707</p>
+                <p class="card-info">Himno Sociedad Femenil</p>
+            </div>
+        `;
     }
 
-    // Cargar el JSON de títulos
-    fetch('titulos.json')
-        .then(response => response.json())
-        .then(data => generarCards(data))
-        .catch(error => {
-            console.error('Error al cargar titulos.json:', error);
-            generarCards([]); // Mostrar "Sin título" si falla
-        });
+    // Ejecutar directamente
+    generarCards();
 </script>
